// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version patch with previous prerelease also graduates prereleased 1`] = `
v1.0.1

HEAD -> main, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1",
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-5": "^1.0.1-beta.3"
+    "package-5": "^1.0.1"
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1",
`;

exports[`version prerelease with immediate graduation 1`] = `
v1.0.1-beta.4

HEAD -> main, tag: v1.0.1-beta.4

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1-beta.4"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1-beta.4",
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1-beta.4",
`;

exports[`version prerelease with immediate graduation 2`] = `
v1.0.1

HEAD -> main, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.4"
+  "version": "1.0.1"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  "version": "1.0.0"
+  "version": "1.0.1"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-1": "^1.0.0"
+    "package-1": "^1.0.1"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.4",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-2": "^1.0.0"
+    "package-2": "^1.0.1"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.4",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-5": "^1.0.1-beta.3"
+    "package-5": "^1.0.1"
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-1": "1.0.0"
+    "package-1": "^1.0.1"
`;

exports[`version prerelease with previous prerelease bumps changed only 1`] = `
v1.0.1-beta.4

HEAD -> main, tag: v1.0.1-beta.4

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1-beta.4"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1-beta.4",
`;

exports[`version prerelease with previous prerelease supersedes --conventional-commits 1`] = `
v1.0.1-beta.4

HEAD -> main, tag: v1.0.1-beta.4

diff --git a/CHANGELOG.md b/CHANGELOG.md
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/CHANGELOG.md
@@ -0,0 +1,11 @@
+# Change Log
+
+All notable changes to this project will be documented in this file.
+See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.
+
+## [1.0.1-beta.4](/compare/v1.0.1-beta.3...v1.0.1-beta.4) (YYYY-MM-DD)
+
+
+### Features
+
+* setup SHA
diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1-beta.4"
diff --git a/packages/package-3/CHANGELOG.md b/packages/package-3/CHANGELOG.md
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-3/CHANGELOG.md
@@ -0,0 +1,11 @@
+# Change Log
+
+All notable changes to this project will be documented in this file.
+See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.
+
+## [1.0.1-beta.4](/compare/v1.0.1-beta.3...v1.0.1-beta.4) (YYYY-MM-DD)
+
+
+### Features
+
+* setup SHA
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1-beta.4",
`;
